--- a/example/House.toml
+++ b/example/House.toml
@@ -3,4 +3,4 @@ name = "example"
 version = "0.0.1"
 
 [dependencies]
-test = { git = "github.com/sndyx/hsl-test", version = "3.0.0" } # dependencies sourced from link
+test = "github.com/sndyx/hsl-test"
