--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 kotlin.code.style=official
+kotlin.native.ignoreDisabledTargets=true
+kotlin.mpp.applyDefaultHierarchyTemplate=false
+
+org.gradle.jvmargs=-Xmx4g
+org.gradle.parallel=true
